# Sistema-de-Controle-de-Caminhao-Autonomo-de-Mineracao

./: .gitignore  CMakeLists.txt  README.md  log_caminhao_1.csv  log_caminhao_2.csv
scripts/: gestao_mina.py
src/: main.cpp
src/core/: CircularBuffer.cpp  ThreadSafeQueue.cpp  task_coletor_dados.cpp  task_controle_navegacao.cpp  task_interface_local.cpp  task_logica_comando.cpp  task_monitor_falhas.cpp  task_planejamento_rota.cpp  task_tratamento_sensores.cpp
src/include/: CircularBuffer.h  SharedResources.h  ThreadSafeQueue.h  tasks.h  types.h
src/src/: simulador_mina_global.py
